# PyGitHubManager

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/githubmanager/: __init__.py  githubmanager.py
src/githubmanager/modules/: about.py  create_repository.py  local_repositories.py  login.py  overview.py  repository.py
src/githubmanager/utils/: SizeConverter.py  clone.py  dialogs.py  repo.py  resources.py  time.py
src/githubmanager/widgets/: CustomWebEnginePage.py  EditRepository.py  FileTemplate.py  HyperlinkLabel.py  IconLabel.py  IssueTemplate.py  LocalRepositoryTemplate.py  RepositoriesListWidgetItem.py  RepositoryTemplate.py
src/pygithubmanager/: __init__.py  githubmanager.py
src/pygithubmanager/modules/: about.py  create_repository.py  local_repositories.py  local_repository.py  login.py  overview.py  repositories.py  repository.py  user.py
src/pygithubmanager/ui/: Ui_about.py  Ui_login.py  Ui_main.py  __init__.py  aboutwindow.ui  loginwindow.ui  mainwindow.ui
src/pygithubmanager/ui/widgets/: Ui_clone.py  Ui_create_repository.py  Ui_file_template.py  Ui_issue_template.py  Ui_overview.py  Ui_popular_repositories.py  Ui_repository.py  Ui_repository_template.py  overview.ui  repository.ui
src/pygithubmanager/utils/: __init__.py  clone.py  dialogs.py  repo.py
src/pygithubmanager/widgets/: AutocompletableComboBox.py  ClickableLabel.py  CloneTemplate.py  EditProfile.py  EditRepository.py  FileTemplate.py  IssueTemplate.py  LocalRepositoryListWidgetItem.py  LocalRepositoryTemplate.py  MplCanvas.py  PopularRepository.py  RepositoryListWidgetItem.py  RepositoryTemplate.py
tests/: test_GithubManager.py
