[tool.poetry]
name = "githubmanager"
version = "0.1.0"
description = "GitHub desktop version created with Python"
authors = ["DomiTP"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
PySide6 = "^6.3.0"
PyGithub = "^1.55"
QtAwesome = "^1.1.1"
pygit2 = "^1.9.2"
GitPython = "^3.1.27"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
